# CPTServo

./: .gitignore  README.md  modal_apg_train.py  progress.txt  pyproject.toml  requirements.txt
.omc/state/: agent-replay-bd72a90d-406e-485c-bd5f-3dd431cb1e10.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
c_export/: Makefile  README.md  cptservo_coeffs.h  cptservo_residual.c  cptservo_residual.h  test_residual_main.c
configs/: v1_recipe.yaml
data/: M3_FAILURE_PIVOT.md  codex_brainstorm_pass2.txt  codex_brainstorm_prompt.txt  gate_M1.json  gate_M11.json  gate_M1_litscan.json  gate_M2.json  gate_M3.json  gate_M3_v0.json  gate_M4.json  gate_M5.json  gate_M7.json  gate_M8.json  obe_surface.h5  pi_sweep_results.json  ppo_train_summary.json  published_allan.json  reduced_calibration.json
models/: apg_smoke_test.pt  apg_smoke_test_pytest.pt  cfc_residual_m11_promoted.json
notebooks/: 00_literature_scan.md  01_calibration_audit.ipynb  01_calibration_audit_skeleton.py  make_notebook.py
scripts/: cfc_improvement_campaign.py  compute_m2_surface.py  export_residual_to_c.py  fast_m3_v0.py  m3_calibration_smoke.py  m5_rh_lqr_gate.py  m6_apg_gate.py  m6_apg_train.py  m7_ppo_gate.py  m7_ppo_train.py  m8_adversarial.py  measure_m1_gate.py  pi_sweep.py  quick_benchmark.py  run_m11_gate.py  run_m3_m4_gates.py  run_m5_gate.py  run_m6_gate.py  verify_c_residual.py
src/cptservo/: __init__.py
tests/: test_baselines.py  test_m11_gate.py  test_ml_research.py  test_policy.py  test_ppo_env.py  test_twin_full_obe.py  test_twin_reduced.py
writeup/: report.md
(+27 files in other folders)
